# arduino-sound-recorder

./: .gitignore  CMakeLists.txt  mi.cpp  microphone_test.ino  readme.md  run.sh
prototype/: microphone_test.ino  wav.cpp
release/macOs/: listen  mi  wav
src/: SerialReader.cpp  SerialReader.h  SerialReaderCallback.cpp  SerialReaderCallback.h  SignalProcessor.cpp  SignalProcessor.h  WavFile.cpp  WavFile.h  main.cpp
src/arduino/microphone_basic_loop_serial_write.ino/: microphone_basic_loop_serial_write.ino.ino
